--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
